<resources>
    <string name="app_name">KIT305_assign2</string>
    <string name="welcome">Welcome</string>
    <string name="app_title">Stroke Rehabilitation</string>
    <string name="start_Button">Start</string>
    <string name="history_Button">History</string>
    <string name="setting_Button">Setting</string>
    <string name="bonus_Button">Tap Game</string>
    <string name="user_name">Mr.Robot</string>
    <string name="free_to_play_Button">Free to Play</string>
    <string name="enterHint">Enter your name</string>
    <string name="settingTitle">Settings</string>
    <string name="repetition">Number of Repetitions:</string>
    <string name="time_limit">Time limit:</string>
    <string name="dots">No of dots:</string>
    <string name="randomization_buttons">Randomisation:</string>
    <string name="indication">Next-button Indication:</string>
    <string name="button_size">Button size:</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="on_off">On/Off</string>
    <string name="rep_num">1-20</string>
    <string name="dot_game">Dots game (Goal Mode)</string>
    <string name="game_rep">Repetition:</string>
    <string name="time">Time: 1:00 min</string>
    <string name="game_descript">Press the highlighted button if the order button is enabled. Please press the buttons in order of the numbers.</string>
    <string name="quit_but">Quit</string>
    <string name="progress_num">1 out of 3</string>
    <string name="number1">1</string>
    <string name="over">Game Over!!</string>
    <string name="total_rep">Total Repetitions:</string>
    <string name="start_time">Start Time:</string>
    <string name="end_time">End Time:</string>
    <string name="but_press">Total buttons pressed:</string>
    <string name="title_activity_history_page">HistoryPage</string>
    <string name="tab_text_1">Dot Game</string>
    <string name="tab_text_2">Free to Play</string>
    <string name="tab_text_3">Tap Game</string>
    <string name="history_page">History</string>
    <string name="frag_title_dot">Dot Game History</string>
    <string name="frag_title_free">Free to Play History</string>
    <string name="frag_title_tap">Tap Game History</string>
    <string name="title_list_button_">Dot Game History Detailed</string>
    <string name="share_but">Share</string>
    <string name="back_but">Back</string>
    <string name="gameDur">Duration:</string>
    <string name="free_play">Dot Game (Free to Play)</string>
    <string name="free_rep">Repetition: Unlimited</string>
    <string name="free_time">Time: Unlimited</string>
    <string name="free_descript">Press the highlighted button if the order button is enabled. Please press the buttons in order of the numbers. Press the Quit button to finish the game.</string>
    <string name="free_result_tip">Congrats on completing the Free to Play mode of Dot game. I think that you are ready to play the Goal mode of Dot game. Just press Start button in home page to play Goal mode.Good luck!</string>
    <string name="free_list_button_title">Free to Play History Detailed</string>
    <string name="tap_game_title">Tap Game</string>
    <string name="tap_game_descrip_small">Tap the Red Dot</string>
    <string name="tap_game_descrip_big">Tap the red dot 10 times with the same frequency at which the black dot blinks. Press the Start button to start the game.</string>
    <string name="blink_rate">Blink rate:</string>
    <string name="tap_counter">Number of Taps: 0 out of 10</string>
    <string name="time_mode">Time mode:</string>
    <string name="finish">Finished!!</string>
    <string name="total_tap">Total number of taps:</string>
    <string name="game_mode">Game mode:</string>
    <string name="tap_list_button_title">Tap Game History Detailed</string>


</resources>