<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FreeToPlay">
    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="54dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_account_circle_24" />

    <TextView
        android:id="@+id/lblEnteredTextFree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/user_name"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageView20"
        app:layout_constraintTop_toTopOf="@+id/imageView20" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/free_play"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <Button
        android:id="@+id/quitButFree"
        android:layout_width="77dp"
        android:layout_height="48dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/home_bg"
        android:text="@string/quit_but"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toEndOf="@+id/repViewFree"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/repViewFree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="54dp"
        android:text="@string/free_rep"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView20" />


    <TextView
        android:id="@+id/timeViewFree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/free_time"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repViewFree" />

    <TextView
        android:id="@+id/textDescribe"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/free_descript"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeViewFree" />

    <View
        android:id="@+id/viewFree"
        android:layout_width="0dp"
        android:layout_height="386dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDescribe"
        app:layout_constraintVertical_bias="0.111"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button5"
        android:layout_width="57dp"
        android:layout_height="54dp"
        android:background="@drawable/circle"
        android:text="@string/number5"
        app:layout_constraintBottom_toBottomOf="@+id/viewFree"
        app:layout_constraintEnd_toEndOf="@+id/viewFree"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="@+id/viewFree"
        app:layout_constraintTop_toBottomOf="@+id/textDescribe"
        app:layout_constraintVertical_bias="0.86" />

    <Button
        android:id="@+id/button4"
        android:layout_width="57dp"
        android:layout_height="54dp"
        android:background="@drawable/circle"
        android:text="@string/number4"
        app:layout_constraintBottom_toBottomOf="@+id/viewFree"
        app:layout_constraintEnd_toEndOf="@+id/viewFree"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toStartOf="@+id/viewFree"
        app:layout_constraintTop_toBottomOf="@+id/textDescribe"
        app:layout_constraintVertical_bias="0.108" />

    <Button
        android:id="@+id/button"
        android:layout_width="57dp"
        android:layout_height="54dp"
        android:background="@drawable/circle"
        android:text="@string/number1"
        app:layout_constraintBottom_toBottomOf="@+id/viewFree"
        app:layout_constraintEnd_toEndOf="@+id/viewFree"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="@+id/viewFree"
        app:layout_constraintTop_toBottomOf="@+id/textDescribe"
        app:layout_constraintVertical_bias="0.496" />

    <Button
        android:id="@+id/button2"
        android:layout_width="57dp"
        android:layout_height="54dp"
        android:background="@drawable/circle"
        android:text="@string/number2"
        app:layout_constraintBottom_toBottomOf="@+id/viewFree"
        app:layout_constraintEnd_toEndOf="@+id/viewFree"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="@+id/viewFree"
        app:layout_constraintTop_toBottomOf="@+id/textDescribe"
        app:layout_constraintVertical_bias="0.672" />

    <Button
        android:id="@+id/button3"
        android:layout_width="57dp"
        android:layout_height="54dp"
        android:background="@drawable/circle"
        android:text="@string/number3"
        app:layout_constraintBottom_toBottomOf="@+id/viewFree"
        app:layout_constraintEnd_toEndOf="@+id/viewFree"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toStartOf="@+id/viewFree"
        app:layout_constraintTop_toBottomOf="@+id/textDescribe"
        app:layout_constraintVertical_bias="0.177" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        android:indeterminate="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewFree"
        app:layout_constraintVertical_bias="0.328" />

</androidx.constraintlayout.widget.ConstraintLayout>